# skare3_tools

./: .gitignore  README.md  genindex.html  index.html  objects.inv  optional-requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py
.github/workflows/: build.yml  docs.yml  flake8.yml  pytest.yml
_static/: documentation_options.js
actions/gdrive_upload/: Dockerfile  action.yml  gdrive.sh
docker/: README.md
docker/centos5-builder/: Dockerfile  README.md
docker/centos7-builder/: Dockerfile  README.md
docs/: .buildinfo  Makefile  api.html  api.rst  conf.py  config.html  config.rst  dash.html  dash.rst  data_service.rst  genindex.html  github.html  github.rst  github_api.html  github_api.rst  index.html  index.rst  objects.inv  packages.html  packages_api.html  packages_api.rst  py-modindex.html  scripts.html  scripts.rst  search.html  searchindex.js  test_results.html  test_results.rst
docs/_modules/: index.html
docs/_sources/: index.rst.txt  packages.rst.txt  scripts.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py
docs_source/: Makefile
docs_source/source/: index.rst
scripts/: conda-run  copy_logs.sh  daily_testr_task_schedule.cfg  github-runner-service.py  run_testr.sh  sync-conda-repository.sh  update-dashboard.sh
skare3_tools/: __init__.py  conda.py  config.py  packages.py  test_results.py
skare3_tools/dashboard/: __init__.py  app.py  app.wsgi  dashboard.py  requirements.txt  task_schedule.cfg  test_results.py
skare3_tools/gdrive/: client_config.pkl  gdrive.py
skare3_tools/github/: __init__.py  app_auth.py  github.py  graphql.py
skare3_tools/scripts/: build.py  bulk.py  clone_git_repos.py  convert_numpydoc.py  fix_namespace_packages.py  git_pass.py  publish_test_logs.py  skare3_promote.py  skare3_release_check.py  skare3_update_summary.py  tasks.py  test_results.py
skare3_tools/task_schedules/: dashboard.cfg  regression_test.cfg
skare3_tools/tests/: conftest.py  test_app_auth.py  test_client.py  test_config.py  test_dashboard_update.py  test_dashboard_views.py  test_git_pass.py  test_github_api.py  test_github_conditional.py  test_graphql_api.py  test_json_cache.py  test_packages.py  test_packaging.py  test_publish_test_logs.py  (+4 more)
(+35 files in other folders)
